fix: apply higher z-index to fix overlays (#3402)

--- a/src/styles/antd-overrides/drawer.scss
+++ b/src/styles/antd-overrides/drawer.scss
@@ -12,5 +12,5 @@
 }
 
 .ant-drawer {
-  z-index: 1;
+  z-index: 20;
 }
